update some styling

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </nav>
   </header>
 
+  <!-- Current Video Template using Underscore -->
   <script id="current-video-view" type="text/html">
     <main class="container">
 			<iframe 
@@ -52,6 +53,7 @@
     </main>
   </script>
 
+  <!-- Waiting Video Template using Underscore -->
   <script id="waiting-video-view" type="text/html">
   	<main class="container">
   		<section class="card-queue" data-id="<%= id %>">
